[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Areas/TransitionX/TransitionX.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1.25, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1.25, 16 )

[node name="TransitionX" type="Area2D"]
position = Vector2( -8, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="TransitionExit" type="Area2D" parent="."]
position = Vector2( 17, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionExit"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_TransitionX_body_entered"]
[connection signal="body_entered" from="TransitionExit" to="." method="_on_TransitionExit_body_entered"]
